Added execution of openbisDev to running configurations.