@@ -37,7 +37,8 @@ dependencies {
 			
 
     runtime 'slf4j:slf4j-log4j12:1.6.2',
-            'apache:commons-fileupload:1.3.3'
+            'apache:commons-fileupload:1.3.3',
+			'eclipse:jetty-runner:9.4.14.v20181114'
 
 	testCompile project(path: ':common', configuration: 'tests'),
 				project(path: ':dbmigration', configuration: 'tests'),
@@ -113,6 +114,19 @@ task copyTestData(type: Copy, dependsOn: testClasses) {
     into "${project.buildDir}/classes/test/ch/systemsx/cisd/openbis/generic/shared/basic"
     include "*.properties"
 }
+
+task executeOpenbisDev(type: JavaExec) {
+	main = 'org.eclipse.jetty.runner.Runner'
+	classpath = sourceSets.main.runtimeClasspath
+	jvmArgs(['-Dpython.path=../libraries/jython/jython-lib', '-Dlog4j.configuration=etc/log.xml',
+				'-Djavax.net.ssl.trustStore=dist/server/openBIS.keystore',
+				'-Dorg.mortbay.util.FileResource.checkAliases=false', '-Xmx2048M', '-XX:MaxPermSize=512m', '-ea'])
+	args(['--classes', '../commonbase/targets/classes', '--classes', '../common/targets/classes',
+			'--classes', '../authentication/targets/classes', '--classes', '../dbmigration/targets/classes',
+			'--classes', '../openbis-common/targets/classes', '--classes', '../openbis_api/targets/classes',
+			'--classes', 'targets/classes', '--lib', 'targets/www/lib/', '--port', '8888', 'targets/www'])
+}
+
 testProjectSamplesEnabled.dependsOn(copyTestData)
 cleanDbSuiteProjectSamplesEnabled.dependsOn(testProjectSamplesEnabled)
 test.dependsOn(copyTestData)
